--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>New tab</title>
   <style type="text/css">
     html {
-      background: #3c3836;
+      background: #504945;
     }
   </style>
 </head>
